* added libapache2-mod-php to setup.py - needed for credential harvester
* added python-requests to setup.py - needed for sms spoofing
* added better check for python-requests in sms spoofing
* added better formating within sms spoofing
* added error handling to sms spoofing if something goes wrong during auth process

~~~~~~~~~~~~~~~~
version 7.2.3
~~~~~~~~~~~~~~~~

* added better handling around powershell detection

~~~~~~~~~~~~~~~~
version 7.2.2
~~~~~~~~~~~~~~~~

* added fsociety banner to initial loading

~~~~~~~~~~~~~~~~
version 7.2.1
~~~~~~~~~~~~~~~~

* fix automatic update line replace bug

~~~~~~~~~~~~~~~~
version 7.2
~~~~~~~~~~~~~~~~

* fixed an issue on installer not copying SET directory properly (why was I moving a file and ... nevermind.)
* changed delay time for HTA attack vector from 3 seconds to 10 seconds to allow proper loading
* added wording when using gmail and application specific passwords
* rewrote ms08-067 instead of being the python exploit to use the metasploit default which is much more reliable
* re-introduced the SMS spoofing method (now option 10) - it has been optimized and reduced to only use SMSGang as a main provider. 
* added ability to add your own attachments via file format attacks instead of having to use the ones built in
* added ability to add your own attachments via mass mailer attack vector
* added new config option called wget_deep and incremented config to 7.2 - this will allow 1 deep download wgets
* added ability to select on deeper wgets through web cloner in the web attack vectors - this will allow you to clone the site and not just the index.html which might be better.. to enable this edit /etc/setoolkit/set.config and turn WGET_DEEP to on.
* added a new check upon startup (which may delay the start of set for a couple seconds, but it will check to see if there is a new version of SET available for you automatically - this is displayed on the main launcher UI when you first start SET